Fix blog dropdown not showing correctly

--- a/app/styles/header.css
+++ b/app/styles/header.css
@@ -95,6 +95,7 @@
 
   .header .main-nav.side-menu {
     display: flex;
+    z-index: 1;
     top: 50px;
     width: 100%;
     justify-content: flex-start;
